0.5.0 - currently working on
- [#2091] Change: Use the createFakeFrontEnd function from the testing framework in the Contacts List

0.4.0 - released 2008-04-18
- [#1818] Change: Comment and whitespace consistency cleanup
- [#1786] Fix: On a search result, fields are shown only if all the previous search results have the field non empty
- [#1072] Change: List the list view TS setup in the reference and use the correct getters
- [#1807] Change: Make the HTML template viewable in a browser
- [#1806] Change: Set the CSS file via constants
- [#1804] Change: Use oelib
- [#1805] Change: Use real visibility keywords and exceptions
- [#1808] Change: Use static_info_tables instead of sr_static_info
- [#1801] Change: Update the requirements to TYPO3 4.0 and PHP 5.1
- [#1803] Change: Move the setup to pi1/static
- [#1810] Change: Code cleanup
- [#1802] Change: Move the language files to XML

0.3.0
- The names of the TS setup entries for the CSS classes have changed. They're all lowercase now and have an underscore after “class”. Example: classTable -> class_table
- Improved the manual.
- Lots of changes "under the hood": Code cleanup and refactoring.
- Added an extra safety check for input values.

0.2.0
- First public version.