@@ -1,4 +1,5 @@
 0.5.0 - currently working on
+- [#2237] Fix: Most of the contactslist tests fail with the current TYPO3 trunk
 - [#2091] Change: Use the createFakeFrontEnd function from the testing framework in the Contacts List
 
 0.4.0 - released 2008-04-18
